Fix email TLS blocklist handling

--- a/config/dns-list.ini
+++ b/config/dns-list.ini
@@ -1,25 +1,30 @@
-# DNS Blacklist Configuration
+# DNS list plugin configuration (haraka-plugin-dns-list)
+# IMPORTANT:
+# - `dns-list` is currently commented out in inbound plugin profiles for incident mitigation.
+# - If re-enabled, this file keeps DNSBL checks informational only (no SMTP hard reject).
+
 [main]
-# Enable DNS blacklist checking
-enabled=true
+# Explicit zone list to avoid plugin defaults that can include noisy lists.
+zones=zen.spamhaus.org,bl.spamcop.net,b.barracudacentral.org
 
-# Timeout for DNS queries (seconds)
-timeout=10
+# Query all configured zones and log overlap for analysis.
+search=all
+periodic_checks=30
 
-# What to do when IP is blacklisted
-[b.barracudacentral.org]
-action=defer
-message=Your IP is blacklisted by Barracuda
+[stats]
+enable=true
 
 [zen.spamhaus.org]
-action=defer  
-message=Your IP is blacklisted by Spamhaus
+type=block
+reject=false
+ipv6=false
 
 [bl.spamcop.net]
-action=defer
-message=Your IP is blacklisted by SpamCop
+type=block
+reject=false
+ipv6=false
 
-# More lenient lists - just log
-[dnsbl.sorbs.net]
-action=none
-message=IP found in SORBS DNSBL
+[b.barracudacentral.org]
+type=block
+reject=false
+ipv6=false
