--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -23,6 +23,7 @@ PHOENIX_VERIFY_URL=https://your-phoenix-app.com/api/haraka/verify-recipient
 PHOENIX_DOMAINS_URL=https://your-phoenix-app.com/api/haraka/domains
 
 # Image tag
+HARAKA_IMAGE=ghcr.io/atomine-elektrine/elektrine-haraka
 HARAKA_IMAGE_TAG=latest
 
 # Optional service images
